[package]
name = "ring"
version = "0.1.0"
authors = ["Bryan Becar <becar.bryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
clap = "2.33.0"
socket2 = "0.3.12"
bincode = "1.2.1"
dns-lookup = "1.0.1"
colored = "1.9"
ctrlc = "3.1.4"
humantime = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
